kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evil2root-trading
  labels:
    name: evil2root-trading
    environment: production
