kubernetes/web-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: evil2root-trading
  labels:
    app: trading-bot
    component: web-external
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "false"
spec:
  ports:
  - port: 80
    targetPort: 5000
    name: http
  selector:
    app: trading-bot
    component: web
  type: LoadBalancer
  externalTrafficPolicy: Cluster
